fix: apply and use theme colors on landing page and algolia (#462)
* fix: apply and use theme colors on landing page and algolia

* fix: use correct color in algolia search box

* fix: faq link in footer

* feat: switch primary font to Inter

* feat: improve theme test page

* feat: improve docs sidebar

* feat: make algolia search respect theme preferences

* fix: visually improve quote from Theo

* fix: change color-base to color-default to prevent overlap with tailwind

* feat: make footer background transparent on landing page

* fix: contrast of left nav links in light mode

* feat: add documentation button animation

* fix: make footer always transparent

* fix: sidebar

* fix: left sidebar z-index

--- a/www/src/styles/global.css
+++ b/www/src/styles/global.css
@@ -4,8 +4,8 @@
 
 @layer base {
   /* Design System Theming */
-  html.light {
-    --color-base: 236 228 236;
+  html {
+    --color-default: 236 228 236;
     --color-neutral: 29 40 58;
     --color-primary: 122 98 246;
     --color-secondary: 58 191 248;
@@ -14,12 +14,14 @@
     --color-error: 251 111 132;
     --color-success: 43 212 189;
     --color-info: 12 166 233;
+    --color-foreground: 15 23 42;
+    --color-background: 236 228 236;
 
-    @apply text-slate-900 bg-base;
+    @apply text-slate-900 bg-default;
   }
 
   html.dark {
-    --color-base: 15 23 41;
+    --color-default: 15 23 41;
     --color-neutral: 29 40 58;
     --color-primary: 122 98 246;
     --color-secondary: 58 191 248;
@@ -28,8 +30,10 @@
     --color-error: 251 111 132;
     --color-success: 43 212 189;
     --color-info: 12 166 233;
+    --color-foreground: 232 221 255;
+    --color-background: 15 23 41;
 
-    @apply text-t3-purple-100 bg-base;
+    @apply text-t3-purple-100 bg-default;
   }
 
   .t3-scrollbar {
@@ -159,7 +163,7 @@
     @apply text-sm mt-8;
   }
   .markdown table > tbody > tr > td > a {
-    @apply break-all;
+    word-wrap: break-word;
   }
   .markdown table {
     @apply max-w-full table-fixed;
